--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,12 +140,9 @@ jobs:
     - name: Check flake
       run: nix flake check
     
-    - name: Build with Nix shell
-      run: |
-        nix-shell --run "cargo build"
-        nix-shell --run "cargo test"
-    
     - name: Build with Nix flake
       run: |
         nix develop --command cargo build
         nix develop --command cargo test
+        nix develop --command maturin develop
+        nix develop --command python example.py
